BPMS-332 - integration tests fixes